--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+  <main>
   <div class="content">
     <div class="card">
       <div class="nft_prev">
@@ -57,7 +58,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>.
     Coded by <a href="https://www.lithy.fr" rel="noopener" target="_blank">Lty</a>.
   </div>
-
+</main>
 </body>
 
 </html>
