--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -1,37 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./css/style.css">
   <title>Frontend Mentor | Order summary card</title>
+  <meta name="description" content="Challenge Frontend Mentor | Order summary card">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <main>
+    <!-- CARD  -->
+    <article>
+      <div class="banner">
+        <div>
+          <img src="./images/illustration-hero.svg" alt="illustration of a person listening music">
+        </div>
+        <div class="content">
+          <h1>Order Summary</h1>
+          <p>You can now listen to millions of songs, audiobooks, and podcasts on any
+            device anywhere you like!</p>
 
-  Order Summary
+          <div class="price">
+            <div class="plan">
+              <p>Annual Plan</p>
+              <p>$59.99/year</p>
+            </div>
+            <a href="#" rel="noopener" target="_blank" rel=>Change</a>
+          </div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+          <div class="buttons">
+            <a href="#" rel="noopener" target="_blank">Proceed to Payment</a>
+            <a href="#" rel="noopener" target="_blank">Cancel Order</a>
+          </div>
 
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
+        </div>
+      </div>
+    </article>
+  </main>
+<!-- CREDITS -->
+<section class="credits">
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>.
+    Coded by <a href="https://www.lithy.fr" rel="noopener" target="_blank">Lty</a>.
   </div>
+</section>
 </body>
 </html>
