--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -44,13 +44,14 @@
         </div>
       </div>
     </article>
+    <div class="credits">
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>.
+        Coded by <a href="https://www.lithy.fr" rel="noopener" target="_blank">Lty</a>.
+      </div>
+    </div>
   </main>
 <!-- CREDITS -->
-<section class="credits">
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>.
-    Coded by <a href="https://www.lithy.fr" rel="noopener" target="_blank">Lty</a>.
-  </div>
-</section>
+
 </body>
 </html>
