--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
   <meta name="description" content="Frontend Mentor | Stats preview card component">
@@ -13,37 +16,39 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
+
 <body>
-<main>
-  <div class="bg">
-    <div class="content">
-  <article>
-<h1>
-  Get <span>insights</span> that help your business grow.
-</h1>
-<p>
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-</p>
-<div class="data">
-  <div class="comp">
-    <p>10k+</p>
-    <p>companies</p>
-  </div>
-  <div class="temp">
-    <p>314</p>
-    <p>templates</p>
-  </div>
-  <div class="queries">
-    <p>12M+</p>
-    <p>queries</p>
-  </div>
-</div>
-  </article>
-  <article>
-  </article>
-</div>
-</div>
-</main>
+  <main>
+    <div class="bg">
+      <div class="content">
+        <article>
+          <h1>
+            Get <span>insights</span> that help your business grow.
+          </h1>
+          <p>
+            Discover the benefits of data analytics and make better decisions regarding revenue, customer
+            experience, and overall efficiency.
+          </p>
+          <div class="data">
+            <div class="comp">
+              <p>10k+</p>
+              <p>companies</p>
+            </div>
+            <div class="temp">
+              <p>314</p>
+              <p>templates</p>
+            </div>
+            <div class="queries">
+              <p>12M+</p>
+              <p>queries</p>
+            </div>
+          </div>
+        </article>
+        <article>
+        </article>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
