--- a/chat-app-css-illustration-master/index.html
+++ b/chat-app-css-illustration-master/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
   <meta name="description" content="Frontend Mentor | [Challenge Name Here]">
@@ -11,44 +18,105 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-<main>
+  <main>
+    <div class="content">
+      <div class="phone">
+        <div class="bg">
+          <div class="screenbg">
+            <div class="screen">
+              <!-- HEADER -->
+              <div class="header">
+                <div class="icon">
+                  <img src="./images/avatar.jpg" alt="avatar contact">
+                </div>
+                <div class="call">
+                  <h1>Samuel Green</h1>
+                  <p>Available to Walk</p>
+                </div>
+              </div>
+              <!-- END HEADER -->
+              <!-- TOP -->
+              <section class="top">
+                <div class="sam">
+                  <span>That sounds great. I’d be happy with that.</span>
+                </div>
+                <div class="sam">
+                  <span>Could you send over some pictures of your dog, please?</span>
+                </div>
+                <div class="dogs">
+                  <div class="pic">
+                    <img src="./images/dog-image-1.jpg" alt="dog picture happy">
+                    <img src="./images/dog-image-2.jpg" alt="dog picture sit">
+                    <img src="./images/dog-image-3.jpg" alt="dog picture run">
+                  </div>
+                </div>
+              </section>
+              <!-- MID -->
+              <section class="mid">
+                <div class="reply">
+                  <span>Here are a few pictures. She’s a happy girl!</span>
+                </div>
+                <div class="reply">
+                  <span>Can you make it?</span>
+                </div>
+              </section>
 
-  Samuel Green
-  Available to Walk
+              <!-- Bottom -->
+              <section class="bottom">
+                <div class="sam">
+                  <span>She looks so happy! The time we discussed works. How long shall I take her out for?</span>
+                </div>
+                <div class="offer">
+                  <i class="far fa-circle"></i>
+                  <span>30 minute walk</span>
+                  <span>$29</span>
+                </div>
+                <div class="offer">
+                  <i class="far fa-circle"></i>
+                  <span>1 hour walk</span>
+                  <span>$49</span>
+                </div>
+              </section>
 
-  That sounds great. I’d be happy with that.
+              <section class="send">
+                <div class="sendrep">
+                  <span>Type a message…</span>
+                </div>
+              </section>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- END PHONE -->
 
-  Could you send over some pictures of your dog, please?
+      <div class="text">
+        <span>Simple booking</span> 
+        <p>Stay in touch with our dog walkers through the chat interface. This makes it easy to
+          discuss arrangements and make bookings. Once the walk has been completed you can rate
+          your walker and book again all through the chat.</p>
+      </div>
+    </div>
 
-  Here are a few pictures. She’s a happy girl!
 
-  Can you make it?
 
-  She looks so happy! The time we discussed works. How long shall I take her out for?
 
-  30 minute walk
-  $29
-
-  1 hour walk
-  $49
-
-  Type a message…
-
-  Simple booking
-
-  Stay in touch with our dog walkers through the chat interface. This makes it easy to 
-  discuss arrangements and make bookings. Once the walk has been completed you can rate 
-  your walker and book again all through the chat.
-    
-</main>
+  </main>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
