--- a/chat-app-css-illustration-master/index.html
+++ b/chat-app-css-illustration-master/index.html
@@ -14,9 +14,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
   <meta name="description" content="Frontend Mentor | [Challenge Name Here]">
-  <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <title>Frontend Mentor | [Lty]</title>
   <style>
     .attribution {
       font-size: 11px;
@@ -46,8 +44,7 @@
                   <p>Available to Walk</p>
                 </div>
               </div>
-              <!-- END HEADER -->
-              <!-- TOP -->
+              <!-- PHONE TOP -->
               <section class="top">
                 <div class="sam">
                   <span>That sounds great. I’d be happy with that.</span>
@@ -72,7 +69,6 @@
                   <span>Can you make it?</span>
                 </div>
               </section>
-
               <!-- Bottom -->
               <section class="bottom">
                 <div class="sam">
@@ -89,7 +85,7 @@
                   <span>$49</span>
                 </div>
               </section>
-
+              <!-- REPLY -->
               <section class="send">
                 <div class="sendrep">
                   <span>Type a message…</span>
@@ -102,20 +98,17 @@
       <!-- END PHONE -->
 
       <div class="text">
-        <span>Simple booking</span> 
+        <span>Simple booking</span>
         <p>Stay in touch with our dog walkers through the chat interface. This makes it easy to
           discuss arrangements and make bookings. Once the walk has been completed you can rate
           your walker and book again all through the chat.</p>
       </div>
     </div>
-
-
-
-
   </main>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend
+      Mentor</a>.
+    Coded by <a href="https://www.lithy.fr" rel="noopener" target="_blank">Lty</a>.
   </div>
 </body>
 
