--- a/chat-app-css-illustration-master/index.html
+++ b/chat-app-css-illustration-master/index.html
@@ -97,7 +97,7 @@
       </div>
       <!-- END PHONE -->
 
-      <div class="text">
+      <footer class="text">
         <span>Simple booking</span>
         <p>Stay in touch with our dog walkers through the chat interface. This makes it easy to
           discuss arrangements and make bookings. Once the walk has been completed you can rate
