--- a/chat-app-css-illustration-master/index.html
+++ b/chat-app-css-illustration-master/index.html
@@ -97,7 +97,7 @@
       </div>
       <!-- END PHONE -->
 
-      <footer class="text">
+      <div class="text">
         <span>Simple booking</span>
         <p>Stay in touch with our dog walkers through the chat interface. This makes it easy to
           discuss arrangements and make bookings. Once the walk has been completed you can rate
@@ -105,11 +105,11 @@
       </div>
     </div>
   </main>
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend
       Mentor</a>.
     Coded by <a href="https://www.lithy.fr" rel="noopener" target="_blank">Lty</a>.
-  </div>
+    </footer>
 </body>
 
 </html>
