--- a/Mila_website/index.html
+++ b/Mila_website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Mila</title>
 </head>
 <body>
     <div class="cursor-dot" data-cursor-dot></div>
@@ -15,6 +15,18 @@
         <div class="line"></div>
       </div>
 
-    <script src="./cursor.js"></script>
+      <nav class="menu">
+        <div class="logo">
+            <img src="logo.png" alt="Logo">
+        </div>
+        <div class="spacer"></div>
+        <div class="menu-buttons">
+            <a href="#" class="menu-button">Accueil</a>
+            <a href="#" class="menu-button">Fonctionnalités</a>
+            <a href="#" class="menu-button">FAQ</a>
+            <a href="#" class="menu-button contact">Contact</a>
+        </div>
+    </nav>
+    <script src="./js/cursor.js"></script>
 </body>
 </html>
