--- a/Mila_website/index.html
+++ b/Mila_website/index.html
@@ -8,13 +8,22 @@
     <title>Mila</title>
 </head>
 <body>
-    <div class="cursor-dot" data-cursor-dot></div>
-    <div class="cursor-outline" data-cursor-outline></div>
     <div class="lines">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
       </div>
+      <nav class="menu">
+          <div class="logo"></div>
+          <div class="menu">
+              <ul>
+                  <li><a href="">Accueil</a></li>
+                  <li><a href="">Fonctionnalités</a></li>
+                  <li><a href="">FAQ</a></li>
+                  <li><a href="">Contact</a></li>
+              </ul>
 
+          </div>
+      </nav>
 </body>
 </html>
