--- a/Mila_website/index.html
+++ b/Mila_website/index.html
@@ -14,7 +14,7 @@
         <div class="line"></div>
       </div>
       <nav class="menu">
-          <div class="logo"></div>
+          <div class="logo"><a href=""><img src="./assets/img/logo.svg" alt=""></a></div>
           <div class="menu">
               <ul>
                   <li><a href="">Accueil</a></li>
