--- a/Mila_website/index.html
+++ b/Mila_website/index.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <!-- <script src="./js/cursor.js"></script> -->
     <title>Mila</title>
 </head>
+
 <body>
-
-      <nav class="menu">
-          <div class="logo"><a href=""><img src="./assets/img/logo.svg" alt=""></a></div>
-          <div class="menu">
-              <ul>
-                  <li><a href="https://www.google.fr">Accueil</a></li>
-                  <li><a href="#">Fonctionnalités</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Contact</a></li>
-              </ul>
-
-          </div>
-      </nav>
-      <section class="header">
-        <div class="lines">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-          </div>
-        <div class="bg_mila">
-            <span>mila</span>
-          </div>
-          
-
-      </section>
-
+    <header>
+        <nav>
+            <div class="menu">
+                <div class="logo">
+                    <img src="" alt="">
+                </div>
+                <div class="nav">
+                    <ul>
+                        <li><a href=""></a>bouton A</li>
+                        <li><a href=""></a>bouton B</li>
+                        <li><a href=""></a>bouton C</li>
+                        <li><a href=""></a>bouton D</li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
+
 </html>
