--- a/Mila_website/index.html
+++ b/Mila_website/index.html
@@ -1,30 +1,12 @@
 <!DOCTYPE html>
-<html lang="fr">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mila</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Document</title>
 </head>
-
 <body>
-    <header>
-        <nav>
-            <div class="menu">
-                <div class="logo">
-                    <img src="" alt="">
-                </div>
-                <div class="nav">
-                    <ul>
-                        <li><a href=""></a>bouton A</li>
-                        <li><a href=""></a>bouton B</li>
-                        <li><a href=""></a>bouton C</li>
-                        <li><a href=""></a>bouton D</li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    
 </body>
-
 </html>
