--- a/Mila_website/index.html
+++ b/Mila_website/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header id="home">
+        <div class="nav">
+            <div class="logo"><a href="#home"><img src="./assets/img/logo_luxantinnovation.svg" alt=""></a></div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Usage</a></li>
+                    <li><a href="#">Fonctionnalitées</a></li>
+                    <li><a href="#">Personnalisations</a></li>
+                    <li><a href="#"><img src="./assets/icons/icon _switch.svg" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="main">
+            <div class="left">
+                <div class="topline">
+                    <p>3D<span>.</span></p>
+                </div>
+                <div class="content">
+                    <div>
+                        <p>assistante</p>
+                    </div>
+                    <div>
+                        <p>technologie holographique</p>
+                    </div>
+                </div>
+            </div>
+            <div class="mid">
+                <div class="bg">
+                    <svg width="425" height="425" viewBox="0 0 375 375" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="187.5" cy="187.5" r="187.5" fill="#D6BB73" />
+                    </svg>
+                </div>
+                <div class="hero"></div>
+            </div>
+            <div class="right">
+                <H1>assistante virtuelle<br>mila</H1>
+                <p>Découvrez Mila, notre assistante virtuelle 3D révolutionnaire, animée par la technologie
+                    holographique</p>
+                <a href="#">Découvrir</a>
+            </div>
+        </div>
+    </header>
 </body>
+
 </html>
