--- a/Mila_website/index.html
+++ b/Mila_website/index.html
@@ -29,19 +29,19 @@
                 <div class="content">
                     <div>
                         <p>assistante</p>
-                    </div>
-                    <div>
-                        <p>technologie holographique</p>
+                        <p>technologie <br> holographique</p>
                     </div>
                 </div>
             </div>
             <div class="mid">
-                <div class="bg">
+                <!-- <div class="bg">
                     <svg width="425" height="425" viewBox="0 0 375 375" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="187.5" cy="187.5" r="187.5" fill="#D6BB73" />
                     </svg>
+                </div> -->
+                <div class="hero">
+                    <img src="./assets/img/mila_header2.png" alt="">
                 </div>
-                <div class="hero"></div>
             </div>
             <div class="right">
                 <H1>assistante virtuelle<br>mila</H1>
