--- a/Mila_website/index.html
+++ b/Mila_website/index.html
@@ -11,14 +11,16 @@
 <body>
     <header id="home">
         <div class="nav">
-            <div class="logo"><a href="#home"><img src="./assets/img/logo_luxantinnovation.svg" alt=""></a></div>
-            <div class="menu">
-                <ul>
-                    <li><a href="#">Usage</a></li>
-                    <li><a href="#">Fonctionnalitées</a></li>
-                    <li><a href="#">Personnalisations</a></li>
-                    <li><a href="#"><img src="./assets/icons/icon _switch.svg" alt=""></a></li>
-                </ul>
+            <div class="navbar">
+                <div class="logo"><a href="#home"><img src="./assets/img/logo_luxantinnovation.svg" alt=""></a></div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">Usage</a></li>
+                        <li><a href="#">Fonctionnalitées</a></li>
+                        <li><a href="#">Personnalisations</a></li>
+                        <li><a href="#"><img src="./assets/icons/icon _switch.svg" alt=""></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="main">
@@ -34,11 +36,6 @@
                 </div>
             </div>
             <div class="mid">
-                <!-- <div class="bg">
-                    <svg width="425" height="425" viewBox="0 0 375 375" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="187.5" cy="187.5" r="187.5" fill="#D6BB73" />
-                    </svg>
-                </div> -->
                 <div class="hero">
                     <img src="./assets/img/mila_header2.png" alt="">
                 </div>
@@ -47,10 +44,135 @@
                 <H1>assistante virtuelle<br>mila</H1>
                 <p>Découvrez Mila, notre assistante virtuelle 3D révolutionnaire, animée par la technologie
                     holographique</p>
-                <a href="#">Découvrir</a>
+                <a href="#divider">Découvrir</a>
             </div>
         </div>
     </header>
+
+    <section class="divider" id="divider">
+        <div>
+            <p>+</p>
+            <p>50</p>
+            <p>Clients <br><span>satisfaits</span></p>
+        </div>
+        <div>
+            <p>+</p>
+            <p>30</p>
+            <p>langues <br><span>disponibles</span></p>
+        </div>
+        <div>
+            <p>+</p>
+            <p>99%</p>
+            <p>engagements <br><span>client</span></p>
+        </div>
+    </section>
+
+    <section class="innovation">
+        <div class="main">
+            <p>L'innovation</p>
+            <p>au service</p>
+            <p>des usagers</p>
+        </div>
+        <div class="bottom">
+            <div>
+                <p>lorem</p>
+            </div>
+            <div><a href=""><img src="./assets/img/arrow_down.svg" alt=""></a></div>
+            <div>
+                <p>lorem</p>
+            </div>
+        </div>
+    </section>
+    <section class="target" id="target">
+        <div class="topline">
+            <div class="gauche">
+                <div>
+                    <p>adapté aux besoins</p>
+                </div>
+                <div>
+                    <p>de votre activité</p>
+                </div>
+            </div>
+            <div class="droite">
+                <div>
+                    <p>intelligence</p>
+                    <p>artificielle</p>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <div class="slider">
+                <div class="slider-content">
+                    <div class="text">
+                        <div class="slide active" data-index="0">
+                            <p>Dans votre <span>aeroport</span></p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem mollitia iure enim
+                                molestias eius voluptatum dolores corrupti quos! Qui porro iste, ratione asperiores
+                                laboriosam explicabo? Ad incidunt ratione dolor temporibus.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, libero! Sunt esse voluptas
+                                rerum, iste rem temporibus ipsa nostrum libero quis nesciunt voluptates error aliquid
+                                sapiente mollitia obcaecati aperiam saepe.</p>
+                        </div>
+                        <div class="slide" data-index="1">
+                            <p>Dans votre <span>gare</span></p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem mollitia iure enim
+                                molestias eius voluptatum dolores corrupti quos! Qui porro iste, ratione asperiores
+                                laboriosam explicabo? Ad incidunt ratione dolor temporibus.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, libero! Sunt esse voluptas
+                                rerum, iste rem temporibus ipsa nostrum libero quis nesciunt voluptates error aliquid
+                                sapiente mollitia obcaecati aperiam saepe.</p>
+                        </div>
+                        <div class="slide" data-index="2">
+                            <p>Dans votre <span>centre commercial</span></p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem mollitia iure enim
+                                molestias eius voluptatum dolores corrupti quos! Qui porro iste, ratione asperiores
+                                laboriosam explicabo? Ad incidunt ratione dolor temporibus.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, libero! Sunt esse voluptas
+                                rerum, iste rem temporibus ipsa nostrum libero quis nesciunt voluptates error aliquid
+                                sapiente mollitia obcaecati aperiam saepe.</p>
+                        </div>
+                        <div class="navigation">
+                            <span class="prev"><svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_24_108)">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M29.996 60.628L15.866 74.102V75.007H14.633V74.543L14.597 74.505L14.11 74.968L0.0169678 59.977L1.02497 59.019L14.557 73.413L14.633 73.341V0.0159912H15.866V72.165L29.038 59.604L29.996 60.628Z" fill="#181818"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_24_108">
+                                <rect width="30" height="75" fill="white"/>
+                                </clipPath>
+                                </defs>
+                                </svg></span>
+                            <span class="next"><svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_24_108)">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M29.996 60.628L15.866 74.102V75.007H14.633V74.543L14.597 74.505L14.11 74.968L0.0169678 59.977L1.02497 59.019L14.557 73.413L14.633 73.341V0.0159912H15.866V72.165L29.038 59.604L29.996 60.628Z" fill="#181818"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_24_108">
+                                <rect width="30" height="75" fill="white"/>
+                                </clipPath>
+                                </defs>
+                                </svg></span>
+                        </div>
+                    </div>
+                    <div class="image">
+                        <div class="slide active" data-index="0">
+                            <img src="./assets/img/slide1.png" alt="Image 1">
+                        </div>
+                        <div class="slide" data-index="1">
+                            <img src="./assets/img/slide2.png" alt="Image 2">
+                        </div>
+                        <div class="slide" data-index="2">
+                            <img src="./assets/img/slide3.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="next"></section>
+    <script src="./js/script.js"></script>
+    <script src="./js/scroll.js"></script>
 </body>
 
 </html>
