--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lty</title>
+    <title>Lty repo</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <div id='stars'></div>
+    <div id='stars2'></div>
+    <div id='stars3'></div>
+    <div id='title'></div>
+    <span>Lty</span>
+    <br>
+    <span>Repo</span>
 </body>
 </html>
-=======
-
->>>>>>> 2ec370065309ebf51716c71fd07e0e0c16906e0e
