--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div id='stars'></div>
     <div id='stars2'></div>
     <div id='stars3'></div>
-    <div id='title'></div>
-    <span>Lty</span>
+    <div id='title'>
+        <span>Lty</span>
     <br>
     <span>Repo</span>
+    </div>
 </body>
 </html>
