--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -106,7 +106,8 @@
                     <source src="./assets/vid/illust.webm" type="video/webm">
                 </video>
                 <div class="titre">
-                    <div class="title"><p>Transport</p> </div>
+                    <div class="title"><p>Transport</p></div>
+                    <div class="texte"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, neque. Corporis ut animi eum veritatis vero aspernatur, beatae facere numquam harum enim, magnam ullam, minus natus sint libero nisi eveniet?</p></div>
                 </div>
                 
             </div>
@@ -209,7 +210,7 @@
         <div class="content">
             <div class="vid">
                 <video controls id="myVideo" preload="metadata">
-                    <source src="./assets/vid/Mila_hotel720p.mp4" type="video/mp4">
+                    <source src="./assets/vid/test.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
