--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -106,17 +106,30 @@
                     <source src="./assets/vid/illust.webm" type="video/webm">
                 </video>
                 <div class="titre">
-                    <div class="title"><p>Transport</p></div>
-                    <div class="texte"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, neque. Corporis ut animi eum veritatis vero aspernatur, beatae facere numquam harum enim, magnam ullam, minus natus sint libero nisi eveniet?</p></div>
+                    <div class="title">
+                        <p>Transport</p>
+                    </div>
+                    <div class="texte">
+                        <p>La difficulté de se repérer dans une gare ou un aéroport peut augmenter considérablement le
+                            stress des passagers, surtout pour les étrangers.</p>
+                        <p> Mila, parlant plus de 30 langues, constitue dans ce cadre un moyen pertinent pour améliorer
+                            l’accueil des passagers et optimiser leur expérience de voyage.</p>
+                        <p>Ils auront ainsi, en temps réel, toutes les informations liées à leur train, vol, quai,
+                            retard éventuel … ils pourront également optimiser leurs visites des restaurants et
+                            boutiques grâce aux offres promotionnelles proposées de manière customisée et ludique. Mila
+                            sera votre aout incontournable pour renforcer la relation avec vos clients !</p>
+                    </div>
                 </div>
-                
+
             </div>
             <div class="section section--pink">
                 <video autoplay muted loop id="myVideo">
                     <source src="./assets/vid/illust.webm" type="video/webm">
                 </video>
                 <div class="titre">
-                    <div class="title"><p>Hôtels et casinos</p></div>
+                    <div class="title">
+                        <p>Hôtels et casinos</p>
+                    </div>
                 </div>
             </div>
             <div class="section section--green">
@@ -124,7 +137,9 @@
                     <source src="./assets/vid/illust.webm" type="video/webm">
                 </video>
                 <div class="titre">
-                    <div class="title"><p>Galeries marchandes</p> </div>
+                    <div class="title">
+                        <p>Galeries marchandes</p>
+                    </div>
                 </div>
             </div>
             <div class="section section--orange">
@@ -132,7 +147,9 @@
                     <source src="./assets/vid/illust.webm" type="video/webm">
                 </video>
                 <div class="titre">
-                    <div class="title"><p>Musées</p> </div>
+                    <div class="title">
+                        <p>Musées</p>
+                    </div>
                 </div>
             </div>
             <div class="section section--blue">
@@ -140,7 +157,9 @@
                     <source src="./assets/vid/illust.webm" type="video/webm">
                 </video>
                 <div class="titre">
-                    <div class="title"><p>Points de vente</p> </div>
+                    <div class="title">
+                        <p>Points de vente</p>
+                    </div>
                 </div>
             </div>
         </div>
