--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -38,6 +38,9 @@
             </div>
             <div class="mid">
                 <div class="hero">
+                    <svg width="457" height="457" viewBox="0 0 457 457" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="228.5" cy="228.5" r="228.5" fill="#D6BB73"/>
+                        </svg>
                     <img src="./assets/img/mila_header2.png" alt="">
                 </div>
             </div>
@@ -48,25 +51,24 @@
                 <a href="#innovation">Découvrir</a>
             </div>
         </div>
+        <div class="divider">
+            <div>
+                <p>+</p>
+                <p>50</p>
+                <p>Clients <br><span>satisfaits</span></p>
+            </div>
+            <div>
+                <p>+</p>
+                <p>30</p>
+                <p>langues <br><span>disponibles</span></p>
+            </div>
+            <div>
+                <p>+</p>
+                <p>99%</p>
+                <p>engagements <br><span>client</span></p>
+            </div>
+        </div>
     </header>
-
-    <section class="divider">
-        <div>
-            <p>+</p>
-            <p>50</p>
-            <p>Clients <br><span>satisfaits</span></p>
-        </div>
-        <div>
-            <p>+</p>
-            <p>30</p>
-            <p>langues <br><span>disponibles</span></p>
-        </div>
-        <div>
-            <p>+</p>
-            <p>99%</p>
-            <p>engagements <br><span>client</span></p>
-        </div>
-    </section>
 
     <section class="innovation" id="innovation">
         <div class="main">
@@ -91,7 +93,7 @@
                     <p>adapté aux besoins</p>
                 </div>
                 <div>
-                    <p>de votre activité</p>
+                    <p>de votre activitée</p>
                 </div>
             </div>
             <div class="droite">
@@ -103,39 +105,36 @@
         </div>
         <div class="flexing">
             <div class="section section--yellow">
-                <video autoplay muted loop id="myVideo">
-                    <source src="./assets/vid/illust.webm" type="video/webm">
-                </video>
                 <div class="titre">
                     <div class="title">
                         <p>Transport</p>
                     </div>
-                    <div class="texte">
-                        <p>La difficulté de se repérer dans une gare ou un aéroport peut augmenter considérablement le
-                            stress des passagers, surtout pour les étrangers.</p>
-                        <p> Mila, parlant plus de 30 langues, constitue dans ce cadre un moyen pertinent pour améliorer
-                            l’accueil des passagers et optimiser leur expérience de voyage.</p>
-                        <p>Ils auront ainsi, en temps réel, toutes les informations liées à leur train, vol, quai,
-                            retard éventuel … ils pourront également optimiser leurs visites des restaurants et
-                            boutiques grâce aux offres promotionnelles proposées de manière customisée et ludique. Mila
-                            sera votre aout incontournable pour renforcer la relation avec vos clients</p>
-                    </div>
+                </div>
+                <video autoplay muted loop id="myVideo">
+                    <source src="./assets/vid/illust.webm" type="video/webm">
+                </video>
+                <div class="texte">
+                    <p>La difficulté de se repérer dans une gare ou un aéroport peut augmenter considérablement le
+                        stress des passagers, surtout pour les étrangers.</p>
+                    <p> Mila, parlant plus de 30 langues, constitue dans ce cadre un moyen pertinent pour améliorer
+                        l’accueil des passagers et optimiser leur expérience de voyage.</p>
+                    <p>Ils auront ainsi, en temps réel, toutes les informations liées à leur train, vol, quai,
+                        retard éventuel … ils pourront également optimiser leurs visites des restaurants et
+                        boutiques grâce aux offres promotionnelles proposées de manière customisée et ludique. Mila
+                        sera votre aout incontournable pour renforcer la relation avec vos clients</p>
                 </div>
 
             </div>
             <div class="section section--pink">
+                
                 <video autoplay muted loop id="myVideo">
                     <source src="./assets/vid/illust.webm" type="video/webm">
                 </video>
-                <div class="titre">
-                    <div class="title">
-                        <p>Hôtels et casinos</p>
-                    </div>
-                    <div class="texte">
-                        <p>Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
-                        <p> Grâce à son intelligence sémantique avancée, notre hôtesse d'accueil virtuelle et multilingue guide les clients, répond à leurs questions, recommande les meilleures attractions, met en avant les événements spéciaux, et bien plus encore !</p>
-                        <p>Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante, unique et mémorable</p>
-                    </div>
+
+                <div class="texte">
+                    <p>Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
+                    <p> Grâce à son intelligence sémantique avancée, notre hôtesse d'accueil virtuelle et multilingue guide les clients, répond à leurs questions, recommande les meilleures attractions, met en avant les événements spéciaux, et bien plus encore !</p>
+                    <p>Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante, unique et mémorable</p>
                 </div>
             </div>
             <div class="section section--green">
@@ -145,6 +144,11 @@
                 <div class="titre">
                     <div class="title">
                         <p>Galeries marchandes</p>
+                    </div>
+                    <div class="texte">
+                        <p>Mila transforme l'expérience de visite dans vos centres commerciaux</p>
+                        <p>Grâce à son intelligence sémantique de pointe, notre hôtesse d'accueil virtuelle, parlant plus de 30 langues, offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                        <p>Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser</p>
                     </div>
                 </div>
             </div>
@@ -169,13 +173,15 @@
                 </div>
             </div>
         </div>
+
+   
     </section>
 
     <section class="fonctions">
         <div class="content">
             <div class="left">
                 <div class="title">
-                    <p>Fonctionnalitées</p>
+                    <p>Fonctionnalités</p>
                     <!-- <p>adaptées</p> -->
                 </div>
                 <div class="desc">
@@ -320,9 +326,9 @@
             </div>
         </div>
         <div class="credit">
-            <p><i class="fas fa-phone"></i> 03 21 13 64 30</p>
-            <p><i class="far fa-envelope"></i> 24 rue de Beaumont - 62950 Noyelles-Godault</p>
-            <p><i class="fas fa-map-marker-alt"></i> contact@luxantinnovation.com</p>
+            <p><i class="fas fa-phone"></i>03 21 13 64 30</p>
+            <p><i class="fas fa-map-marker-alt"></i>24 rue de Beaumont - 62950 Noyelles-Godault</p>
+            <p><i class="far fa-envelope"></i>contact@luxantinnovation.com</p>
         </div>
 
     </footer>
